--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
-language: node_js
+language: nodejs
 node_js:
-  - '0.10'
+  - "0.12"
+  - "0.11"
+  - "0.10"
+  - "0.8"
+  - "0.6"
+  - "iojs"
+  - "iojs-v1.0.4"
+install:
+  - npm i mocha -g
+  - npm i
+script:
+  - npm test
