--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ node_js:
   - "iojs-v1.0.4"
 install:
   - npm i mocha -g
+  - npm i semistandard -g
   - npm i
 script:
   - npm test
+  - semistandard
